angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: NodePort
  selector:
    app: angular
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
